@@ -6,7 +6,7 @@ argument.
 
 Name             Version UserModes ChanModes Supported Tested
 --------------------------------------------------------------
-jointhrottle        2.4                 j:        N       N
-m_blocknonalpha     1.0                  y        N       N
-noctcp              1.3                  D        N       N
+jointhrottle        2.4                 j:        Y       N
+m_blocknonalpha     1.0                  y        Y       N
+noctcp              1.3                  D        Y       N
 privdeaf            0.0.6      D                  Y       N
