@@ -13,6 +13,7 @@ CREATE TABLE chan (
   mode_lc enum('Y','N') NOT NULL default 'N',
   mode_lf enum('Y','N') NOT NULL default 'N',
   mode_li enum('Y','N') NOT NULL default 'N',
+  mode_lj enum('Y','N') NOT NULL default 'N',
   mode_lk enum('Y','N') NOT NULL default 'N',
   mode_ll enum('Y','N') NOT NULL default 'N',
   mode_lm enum('Y','N') NOT NULL default 'N',
@@ -22,9 +23,11 @@ CREATE TABLE chan (
   mode_ls enum('Y','N') NOT NULL default 'N',
   mode_lt enum('Y','N') NOT NULL default 'N',
   mode_lu enum('Y','N') NOT NULL default 'N',
+  mode_ly enum('Y','N') NOT NULL default 'N',
   mode_lz enum('Y','N') NOT NULL default 'N',
   mode_ua enum('Y','N') NOT NULL default 'N',
   mode_uc enum('Y','N') NOT NULL default 'N',
+  mode_ud enum('Y','N') NOT NULL default 'N',
   mode_ug enum('Y','N') NOT NULL default 'N',
   mode_uh enum('Y','N') NOT NULL default 'N',
   mode_uk enum('Y','N') NOT NULL default 'N',
@@ -37,10 +40,11 @@ CREATE TABLE chan (
   mode_us enum('Y','N') NOT NULL default 'N',
   mode_ut enum('Y','N') NOT NULL default 'N',
   mode_uv enum('Y','N') NOT NULL default 'N',
+  mode_lf_data varchar(20) NOT NULL default '',
+  mode_lj_data varchar(5) NOT NULL default '',
+  mode_lk_data varchar(23) NOT NULL default '',
   mode_ll_data int(10) NOT NULL default '0',
   mode_ul_data varchar(33) NOT NULL default '',
-  mode_lk_data varchar(23) NOT NULL default '',
-  mode_lf_data varchar(20) NOT NULL default '',
   PRIMARY KEY  (chanid),
   UNIQUE KEY channel (channel)
 ) TYPE=MyISAM;
